added support of dark theme to scale indicator